# uca-andor

./: CMakeLists.txt  Libuca_Andor_Installation_Instruction.txt  README.md  meson.build  meson_options.txt  uca-andor-camera.c  uca-andor-camera.h  uca-andor-enums.c.template
cmake/: FindAtcore.cmake  FindAtutility.cmake  Glib2MkEnums.cmake
etc/: Makefile
